--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,13 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
-dist/bundle.js
+modules.yaml
+node_modules
+pnpm-lock.yaml
+pnpm-workspace.yaml
+gitignore
+LICENSE
+README.orgdist/bundle.js
 dist/bundle.js.map
 day1/node_modules
 node_modules
@@ -41,3 +47,6 @@ modules.yaml
 gitignore
 LICENSE
 README.org
+
+pnpm-lock.yaml
+pnpm-workspace.yaml
