--- a/day4/package.json
+++ b/day4/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-react": "^7.27.1",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/styled-components": "^5.1.34",
     "babel-loader": "^10.0.0",
     "esbuild": "^0.25.10",
     "eslint": "^9.35.0",
@@ -33,6 +34,7 @@
   "dependencies": {
     "notistack": "^3.0.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "styled-components": "^6.1.19"
   }
 }
