--- a/day5/package.json
+++ b/day5/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "day3",
+  "name": "day5",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -29,12 +29,14 @@
     "eslint": "^9.35.0",
     "http-server": "^14.1.1",
     "jest": "^30.1.3",
+    "react-router-dom": "^7.9.2",
     "typescript": "^5.9.2"
   },
   "dependencies": {
     "notistack": "^3.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router": "^7.9.1",
     "styled-components": "^6.1.19"
   }
 }
